--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 } */
 
 body{
-    font-family: calibri;
+    font-family: poppins;
 }
 
 .navbar{
@@ -25,7 +25,7 @@ body{
 h1{
     color: rgba(14, 14, 14, 0.795);
     /* padding-left: 5vw; */
-    font-size: 2.5vw;
+    font-size: 2.3vw;
     /* background-color: blueviolet; */
 }
 
@@ -38,8 +38,9 @@ ul{
 .nav-part2{
     padding-right: 3vh;
     /* background-color: rgb(8, 61, 61); */
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     font-weight: 600;
+    font-family: poppins;
 }
 
 .section1{
@@ -48,15 +49,70 @@ ul{
 
 .section1 .box1{
     font-family: poppins;
-    padding-left: 5vw;
+    padding-left: 8%;
+    padding-right: 8%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2.1vh;
     width: 50%;
     height: 90vh;
+    position: relative;
     /* background-color: rgb(241, 138, 11); */
 }
+
+.box1 .icons{
+    width:fit-content;
+    display: flex;
+    position: absolute;
+    top: 80%;
+    bottom: 14%;
+    gap: 7vh;
+    font-size: 4vh;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding-left: 1%;
+}
+
+#resumeBtn i{
+    padding-left: 6%;
+    padding-right: 0;
+    font-size: 2.5vh;
+}
+
+.intro #resumeBtn{
+    margin-top: 5%;
+    border: none;
+    width: 30vh;
+    height:fit-content;
+    overflow:hidden;
+    border-radius: 5px;
+    padding: 1% 5%;
+    background-color: rgb(48,48,48);
+}
+#resumeBtn a{
+    width:10vw;
+    background-color: rgb(48,48,48);
+    color: white;
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    border: none;
+    font-size: 3vh;
+    font-family: poppins;
+    padding-right: 9%;
+}
+
+.box1 .icons button{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .section1 .intro{
     font-size: 2.1vh;
     font-weight: 600;
@@ -112,17 +168,17 @@ ul{
         width: 40%;
         height: 100%;
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
+        padding-left: 12%;
         align-items: center;
         margin: 0;
-        padding: 0;
     }
 
     .box3 img{
         margin: 0;
         padding: 0;
         box-shadow: 2px 2px 3px rgb(255, 255, 255);
-        width: 50%;
+        width: 70%;
         transition: transform 0.4s linear;
     }
 
@@ -133,11 +189,13 @@ ul{
     .box4{
         color: white;
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
         align-items: center;
         width: 60%;
         font-family: poppins;
         font-size: 2.2vh;
+        padding: 8%;
+        padding-left: 0;
 
     }
 
@@ -156,7 +214,7 @@ ul{
 
     .box4 button:hover{
         transform: scale(1.05);
-        opacity: 0.85;
+        opacity: 0.9;
     }
 }
 
@@ -172,17 +230,27 @@ ul{
     justify-content: space-between;
     padding: 5% 0;
     flex-wrap: wrap;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    /* position: relative; */
+}
+
+.progress-bars .skill-text{
+    /* position: absolute; */
+    font-size: 3.5vw;
+    color: rgb(48,48,48);
+    margin-left:0;
 }
 
 .progress-bars .bar-box{
     /* background-color: white; */
-    height: 30%;
+    height: 25%;
     width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    padding: 0 5%;
+    padding: 0 8%;
     flex-wrap: wrap;
 }
 .progress-bars .box{
@@ -190,15 +258,15 @@ ul{
     padding: 0;
     margin: 0;
     width: 25%;
-    height: 90%;
+    height: 95%;
     /* backdrop-filter: blur(6px); */
 
-    background-color: rgb(48,48,48);
+    background-color: rgb(255, 255, 255);
 
 
     border-radius: 20px;
 
-    box-shadow: 35px 35px 68px 0px rgba(48, 48, 48, 0.6), inset -12px -12px 16px 0px rgba(95, 95, 95, 0.774), inset 0px 11px 28px 0px rgba(66, 66, 66, 0.856);
+    /* box-shadow: 35px 35px 68px 0px rgba(48, 48, 48, 0.6), inset -12px -12px 16px 0px rgba(95, 95, 95, 0.774), inset 0px 11px 28px 0px rgba(66, 66, 66, 0.856); */
 
     display: flex;
     flex-direction: column;
@@ -210,25 +278,25 @@ ul{
 }
 
 .progress-bars .box .text{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 140%;
+    font-family: poppins;
+    font-size: 3vh;
     font-weight: 600;
-    color: rgb(255, 255, 255);
+    color: rgb(48, 48, 48);
     margin-bottom: 15%;
 }
 
 .progress-bars .progress-line{
     width: 85%;
-    height: 2%;
+    height: 5%;
     /* backdrop-filter: blur(6px); */
-    background-color: rgb(84, 85, 85);
+    background-color: rgb(147 147 147 / 91%);
 
 
-    /* border-radius: 100%; */
+    border-radius: 10px;
 
     /* box-shadow: 35px 35px 68px 0px rgb(226, 219, 219), inset -12px -12px 16px 0px rgba(68, 65, 65, 2.6), inset 0px 11px 28px 0px rgb(255, 255, 255); */
 
-    overflow-x: hidden;
+    overflow: hidden;
 
 }
 
@@ -238,7 +306,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress2{
@@ -246,7 +314,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress3{
@@ -254,7 +322,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress4{
@@ -262,7 +330,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress5{
@@ -270,7 +338,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress6{
@@ -278,7 +346,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress7{
@@ -286,7 +354,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress8{
@@ -294,7 +362,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress9{
@@ -302,14 +370,17 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
-    data-aos: ease;
+    background-color: rgb(0, 0, 0);
 }
 
-.progress-bars .box:hover{
+.progress{
+    background-color: black;
+}
+
+/* .progress-bars .box:hover{
     position: relative;
     transform: scale(1.07);
-}
+} */
 
 
 
