--- a/style.css
+++ b/style.css
@@ -43,6 +43,27 @@ ul{
     font-family: poppins;
 }
 
+.nav-part2 button{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.nav-part2 a{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    text-decoration: none;
+}
+
 .section1{
     display: flex;
 }
