--- a/style.css
+++ b/style.css
@@ -95,10 +95,24 @@ ul{
     padding-left: 1%;
 }
 
+.box1 .icons button:hover{
+    transition: 0.2s linear;
+    opacity: 0.7;
+}
+
+#resumeBtn{
+    transition: transform 0.3s linear;
+}
+
 #resumeBtn i{
     padding-left: 6%;
     padding-right: 0;
     font-size: 2.5vh;
+}
+
+#resumeBtn:hover{
+    transform: scale(1.1);
+    opacity: 0.9;
 }
 
 .intro #resumeBtn{
