--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul{
 .nav-part2{
     padding-right: 3vh;
     /* background-color: rgb(8, 61, 61); */
-    font-size: 1.2vw;
+    font-size: 2.5vh;
     font-weight: 600;
     font-family: poppins;
 }
@@ -524,6 +524,17 @@ ul{
         width: 100vw;
         height: 80vh;
         /* padding: 0 2%; */
+    }
+
+    .about-me-description button{
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+        font-size: 10vh;
     }
 
     .box4 .about-me-description{
