--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ ul{
     background-color: rgb(48, 47, 47);
     display: flex;
     .box3{
-        background-color: rgb(48, 48, 48);
+        background-color: rgb(255, 255, 255);
         width: 40%;
         height: 100%;
         display: flex;
@@ -213,9 +213,11 @@ ul{
         padding-left: 12%;
         align-items: center;
         margin: 0;
+        border: none;
     }
 
     .box3 img{
+        border-radius: 5px;
         margin: 0;
         padding: 0;
         box-shadow: 2px 2px 3px rgb(255, 255, 255);
@@ -228,7 +230,9 @@ ul{
     }
 
     .box4{
-        color: white;
+        background-color: white;
+        color: rgb(48, 48, 48);
+        font-weight: 600;
         display: flex;
         /* justify-content: center; */
         align-items: center;
@@ -241,16 +245,15 @@ ul{
     }
 
     .box4 button{
-        color: rgb(48, 48, 48);
-        background-color: rgb(255, 255, 255);
+        color: white;
+        background-color: rgb(48, 48, 48);
         border: none;
-        padding-left: 3%;
-        padding-right: 3%;
         font-family: poppins;
-        font-size: 115%;
-        font-weight: 600;
+        font-weight: 500;
         transition: transform 0.3s linear;
-        border-radius: 3%;
+        border-radius: 5px;
+        padding: 1% 8%;
+        font-size: 2.5vh;
     }
 
     .box4 button:hover{
@@ -274,6 +277,7 @@ ul{
     padding-top: 4%;
     padding-bottom: 4%;
     /* position: relative; */
+    border-bottom: 0.1px solid rgb(189, 189, 189);
 }
 
 .progress-bars .skill-text{
@@ -425,19 +429,6 @@ ul{
 
 
 
-.section4{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(214, 214, 214);
-    /* color: rgb(255, 255, 255); */
-}
-
-.section4 h1{
-    padding-left: 5%;
-    padding-top: 2%;    
-}
-
-
 @media (max-width:600px) {
 
     body{
@@ -449,7 +440,7 @@ ul{
         padding-top: 0;
         margin-top: 0;
     }
-
+    
     .navbar{
         height:9.5vh;
         width: 100vw;
@@ -570,5 +561,135 @@ ul{
         outline: inherit;
     }
     
+    
+}
 
+.section4{
+    padding: 0;
+    margin: 0;
+    /* background-color: yellow; */
+    height: 300vh;
+}
+
+.box6,.box7,.box10 img{
+    /* border: 1px solid rgba(48, 48, 48, 0.2); */
+    -webkit-border-radius: 50px;
+    border-radius: 10px;
+    background: #D1D8EC;
+    -webkit-box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ff;
+    box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ff;
+    
+}
+.project1{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    /* background-color: rgb(87, 87, 7); */
+
+}
+
+.project1 .box5{
+    width:30%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: rgb(107, 107, 92); */
+
+}  
+
+.project1 .box6{
+    width:60%;
+    height: 80vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: rgb(39, 39, 3); */
+    padding: 0;
+    margin: 0;
+}
+
+.project1 .box6 img{
+    height:60vh;
+    width:max-content;
+    margin:0;
+}
+
+/* -------------------------------------- */
+
+
+.project2{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    /* background-color: rgb(253, 253, 253); */
+
+}
+
+.project2 .box8{
+    width:30%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: rgb(107, 107, 92); */
+
+}  
+
+.project2 .box7{
+    width:60%;
+    height: 80vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: rgb(39, 39, 3); */
+    padding: 0;
+    margin: 0;
+}
+
+.project2 .box7 img{
+    height:55vh;
+    width:max-content;
+    margin:0;
+}
+
+/* --------------------------------------- */
+
+
+.project3{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    /* background-color: rgb(87, 87, 7); */
+
+}
+
+.project3 .box9{
+    width:30%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: rgb(107, 107, 92); */
+
+}  
+
+.project3 .box10{
+    width:60%;
+    height: 80vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: rgb(39, 39, 3); */
+    padding: 0;
+    margin: 0;
+}
+
+.project3 .box10 img{
+    height:60vh;
+    width:max-content;
+    margin:0;
 }
