--- a/style.css
+++ b/style.css
@@ -775,6 +775,7 @@ footer h3{
     }
     .section2 .box4{
         padding-top: 0;
+        padding: 1% 7%;
         height: 80vh;
         width: 100vw;
         margin-bottom: 5vh;
