--- a/style.css
+++ b/style.css
@@ -185,13 +185,13 @@ ul{
     padding: 0 5%;
     flex-wrap: wrap;
 }
-.progress-bars .box{
+/* .progress-bars .box{
     content: " ";
     padding: 0;
     margin: 0;
     width: 25%;
     height: 90%;
-    /* backdrop-filter: blur(6px); */
+    /* backdrop-filter: blur(6px); 
 
     background-color: rgb(48,48,48);
 
@@ -207,7 +207,7 @@ ul{
     overflow-x: hidden;
 
     transition: 0.3s linear;
-}
+} */
 
 .progress-bars .box .text{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -238,7 +238,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress2{
@@ -246,7 +246,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress3{
@@ -254,7 +254,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress4{
@@ -262,7 +262,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress5{
@@ -270,7 +270,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress6{
@@ -278,7 +278,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress7{
@@ -286,7 +286,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress8{
@@ -294,7 +294,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars #progress9{
@@ -302,8 +302,7 @@ ul{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: white;
-    data-aos: ease;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bars .box:hover{
@@ -311,7 +310,9 @@ ul{
     transform: scale(1.07);
 }
 
-
+.progress{
+    background-color: black;
+}
 
 .section4{
     width: 100%;
@@ -323,4 +324,9 @@ ul{
 .section4 h1{
     padding-left: 5%;
     padding-top: 2%;    
+}
+
+.text{
+    color: black;
+    font-family: calibri;
 }
