--- a/style.css
+++ b/style.css
@@ -853,7 +853,60 @@ body{
 }
 
 /* ----------------------- */
+/* =======section5=========== */
 
+.section5{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section5 form{
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    cursor: pointer;
+}
+.section5 form input{
+    border-radius: 5px;
+    width: 50vw;
+    height: 7vh;
+    font-family: calibri;
+    font-size: 3.5vh;
+    font-weight: 600;
+    /* padding-left: 3%; */
+    background-color: rgb(255, 255, 255);
+    border: 3px solid rgb(204, 204, 204);
+    margin-bottom: 2%;
+}
+.section5 ::placeholder{
+    font-weight: 500;
+}
+.section5 #submit-btn{
+    width: 50.5vw;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-size: 3.5vh;
+    height: 6vh;
+    font-weight: 600;
+    border: none;
+}
+.section5 #submit-btn:hover{
+    opacity: 0.8;
+}
+.section5 form textarea{
+    font-family: calibri;
+    font-size: 3.2vh;
+    font-weight: 600;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    width: 50vw;
+    height: 40vh;
+    border: 3px solid rgb(204, 204, 204);
+    border-radius: 10px;
+}
 
 /* ---------footer-css---------- */
 footer{
@@ -1176,6 +1229,14 @@ footer h3{
         padding-top: 15%;
         padding-left: 15%;
         padding-right: 4%;
+    }
+
+    .section5 form input{
+        width: 90vw;
+    }
+
+    .section5 form textarea{
+        width: 90vw;
     }
 
     
