--- a/style.css
+++ b/style.css
@@ -868,6 +868,7 @@ body{
     flex-direction: column;
     gap: 1vh;
     cursor: pointer;
+    position: relative;
 }
 .section5 form input{
     border-radius: 5px;
@@ -885,7 +886,10 @@ body{
     font-weight: 500;
 }
 .section5 #submit-btn{
-    width: 50.5vw;
+    position: absolute;
+    bottom: -20%;
+    right: 1%;
+    width: 10.5vw;
     background-color: rgb(0, 0, 0);
     color: white;
     font-size: 3.5vh;
@@ -897,6 +901,7 @@ body{
     opacity: 0.8;
 }
 .section5 form textarea{
+    resize: none;
     font-family: calibri;
     font-size: 3.2vh;
     font-weight: 600;
@@ -1238,8 +1243,11 @@ footer h3{
     .section5 form textarea{
         width: 90vw;
     }
-
     
+    .section5 form #submit-btn{
+        width: 25vw;
+    }
+
     .footer{
         height: 60vh;
         position: relative;
