--- a/style.css
+++ b/style.css
@@ -1110,7 +1110,7 @@ footer h3{
         border-radius: 5px;
         margin: 0;
         box-shadow: 2px 2px 3px rgb(255, 255, 255);
-        width: 27vh;
+        width: 60vw;
         transition: transform 0.4s linear;
         -webkit-border-radius: 50px;
         border-radius: 10px;
