--- a/style.css
+++ b/style.css
@@ -1012,15 +1012,67 @@ footer h3{
         padding-top: 2%;
         margin-top: 0;
         overflow-x: hidden;
+        z-index: 2;
     }
     .nav-part2{
-        width: 1vw;
-        display: none;
+        display:none;
     }
+    .nav-part3{
+        height: 50vh;
+        width: 50vh;
+    }
+    .nav-part3 ul{
+        font-weight: 100;
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .nav-part3{
+        border-top-left-radius: 50px ;
+        border-bottom-left-radius: 50px ;
+        position: absolute;
+        z-index: 2;
+        right: 0;
+        bottom: 80%;
+        width: 50vw;
+        height: 40vh;
+        background-color: rgba(48, 48, 48);
+        color: white;
+        padding-right: 3vh;
+        /* background-color: rgb(8, 61, 61); */
+        font-size: 2.5vh;
+        font-weight: 600;
+        font-family: poppins;
+        transition: all 4s ease-in;
+    }
+    
+    .nav-part3 button{
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+    }
+    
+    .nav-part3 a{
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+        text-decoration: none;
+    }
+    
     .navbar i{
         position: absolute;
         left: 90%;
-        font-size: 3.2vh;
+        font-size: 3.4vh;
         display: block;
     }
 
