--- a/style.css
+++ b/style.css
@@ -1023,6 +1023,7 @@ footer h3{
         width: 50vh;
     }
     .nav-part3 ul{
+	list-style: none;
         font-weight: 100;
         display: flex;
         height: 100%;
