--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ body{
     list-style: none;
 }
 
+ul{
+    list-style: none;
+    list-style-type: none;
+}
 .nav-part2{
     padding-right: 3vh;
     /* background-color: rgb(8, 61, 61); */
