--- a/style.css
+++ b/style.css
@@ -999,7 +999,11 @@ footer h3{
 
 
 /* -------------------responsivness---------------------- */
-
+@media (min-width: 750){
+    .ri-close,.ri-menu-line,.nav-part3{
+	display: none;
+    }
+}
 @media (max-width:450px) {
 
     body{
