--- a/style.css
+++ b/style.css
@@ -1051,7 +1051,7 @@ footer h3{
         z-index: 2;
         right: 0;
         bottom: 80%;
-        width: 50vw;
+        width: 0;
         height: 40vh;
         background-color: rgba(48, 48, 48);
         color: white;
@@ -1060,6 +1060,7 @@ footer h3{
         font-size: 2.5vh;
         font-weight: 600;
         font-family: poppins;
+        transition: width 0.7s;
     }
     
     .nav-part3 button{
