--- a/style.css
+++ b/style.css
@@ -1045,7 +1045,7 @@ footer h3{
     }
 
     .nav-part3{
-	display: unset;
+	display: block;
         border-top-left-radius: 50px ;
         border-bottom-left-radius: 50px ;
         position: absolute;
@@ -1061,7 +1061,7 @@ footer h3{
         font-size: 2.5vh;
         font-weight: 600;
         font-family: poppins;
-        transition: width 0.7s;
+        transition: width 0.7s linear;
     }
     
     .nav-part3 button{
