--- a/style.css
+++ b/style.css
@@ -1061,7 +1061,7 @@ footer h3{
         font-size: 2.5vh;
         font-weight: 600;
         font-family: poppins;
-        transition: width 0.7s linear;
+        transition: width 0.4s linear;
     }
     
     .nav-part3 button{
@@ -1108,6 +1108,14 @@ footer h3{
     .section1 .box1{
         height: 60vh;
         width: 100vw;
+    }
+    .section1 .intro{
+	    opacity:0.2;
+	    transition: opacity o.4s linear;
+    }
+    .section1 .sec1-img{
+	    opacity:0.2;
+	    transition: opacity o.4s linear;
     }
     .section1 .box1 .intro h1{
         font-size: 4vh;
